# grimalpha

./: .clog.toml  .gitignore  .gitmodules  Cargo.toml  ChangeLog.md  readme.org
proto/: Cargo.toml  Proto.toml
proto/assets/shaders/: basic.330.vert
proto/assets/shaders/basic/: 150.frag  150.vert  330.frag  330.vert
proto/src/: .#main.rs  app.rs  config.rs  imgui.ini  input.rs  macros.rs  main.rs  readme.md  resource.rs  steamworks.rs  ui.rs  util.rs
proto/src/resource/: mod.rs  shader.rs  shaders.rs  texture.rs
src/: main.rs
