[package]
name = "proto"
version = "0.1.0"
authors = ["David Holland <davidthenameless@gmail.com>"]
[features]
default = ["glium", "glutin"]
xinput = ["winapi", "xinput-sys"]
steamworks = []


[dependencies]
imgui = {path = "../extlib/imgui-rs"}
imgui-sys = {path = "../extlib/imgui-rs/imgui-sys"}
glium = {version = "0.15.0", optional = true, features = ["glutin"]}
glutin = {version = "0.6.1", optional = true}
time = "*"
winapi = {version = "*", optional = true}
xinput-sys = {version = "*", optional = true}
toml = "*"
[dev-dependencies]
gcc = "0.3"

