[package]
name = "proto"
version = "0.1.0"
authors = ["David Holland <davidthenameless@gmail.com>"]
[features]
default = ["glium", "glutin"]
xinput = ["winapi", "xinput-sys"]
steamworks = []


[dependencies]
imgui = {path = "../extlib/imgui-rs"}
imgui-sys = {path = "../extlib/imgui-rs/imgui-sys"}
imgui-glium-renderer = {path = "../extlib/imgui-rs/imgui-glium-renderer"}
glium = {version = "0.16.0", optional = true, features = ["glutin"]}
glutin = {version = "0.7.4", optional = true}
time = "*"
winapi = {version = "*", optional = true}
xinput-sys = {version = "*", optional = true}
toml = "*"
rustc-serialize = "*"
uuid = { version = "0.2", features = ["rustc-serialize", "use_std", "v5"]}
png = "*"
image = "*"
cgmath = "*"
[dev-dependencies]
gcc = "0.3"

